Añadido dashbboard-artist y cambios minimos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <a href="pages/find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" class="nav-link" data-nav="map">Map</a>
+                </li>
+                <li class="nav-item">
                     <a href="pages/login.html" class="nav-button" data-nav="login">Login</a>
                 </li>
             </ul>
@@ -101,76 +104,76 @@
         <div class="artists-grid">
                 <div class="artist-card">
                     <div class="artist-image">
-                        <img src="images/artist4.jpg" alt="David War">
+                        <img src="images/artist3.jpg" alt="Elena Martínez">
                     </div>
                     <div class="artist-info">
-                        <h3 class="artist-name">David War</h3>
-                        <p class="artist-style">Japanese</p>
-                        <div class="artist-details">
-                            <div class="artist-location">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                                <span>Seattle, WA</span>
-                            </div>
-                            <div class="artist-rating">
-                                <span class="star-icon">⭐</span>
-                                <span>1654</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="artist-card">
-                    <div class="artist-image">
-                        <img src="images/artist1.jpg" alt="Sarah Chen">
-                    </div>
-                    <div class="artist-info">
-                        <h3 class="artist-name">Sarah Chen</h3>
-                        <p class="artist-style">Watercolor</p>
-                        <div class="artist-details">
-                            <div class="artist-location">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                                <span>Los Angeles, CA</span>
-                            </div>
-                            <div class="artist-rating">
-                                <span class="star-icon">⭐</span>
-                                <span>1456</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="artist-card">
-                    <div class="artist-image">
-                        <img src="images/artist2.jpg" alt="Marcus Rodriguez">
-                    </div>
-                    <div class="artist-info">
-                        <h3 class="artist-name">Marcus Rodriguez</h3>
-                        <p class="artist-style">Traditional</p>
-                        <div class="artist-details">
-                            <div class="artist-location">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                                <span>Austin, TX</span>
-                            </div>
-                            <div class="artist-rating">
-                                <span class="star-icon">⭐</span>
-                                <span>1245</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="artist-card">
-                    <div class="artist-image">
-                        <img src="images/artist3.jpg" alt="Elena Volkov">
-                    </div>
-                    <div class="artist-info">
-                        <h3 class="artist-name">Elena Volkov</h3>
+                        <h3 class="artist-name">Elena Martínez</h3>
                         <p class="artist-style">Blackwork</p>
                         <div class="artist-details">
                             <div class="artist-location">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                                <span>Portland, OR</span>
+                                <span>Avilés, Asturias</span>
                             </div>
                             <div class="artist-rating">
                                 <span class="star-icon">⭐</span>
-                                <span>1123</span>
+                                <span>4.8</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="artist-card">
+                    <div class="artist-image">
+                        <img src="images/artist1.jpg" alt="Carmen García">
+                    </div>
+                    <div class="artist-info">
+                        <h3 class="artist-name">Carmen García</h3>
+                        <p class="artist-style">Watercolor</p>
+                        <div class="artist-details">
+                            <div class="artist-location">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+                                <span>Oviedo, Asturias</span>
+                            </div>
+                            <div class="artist-rating">
+                                <span class="star-icon">⭐</span>
+                                <span>4.7</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="artist-card">
+                    <div class="artist-image">
+                        <img src="images/artist4.jpg" alt="Sofía Martínez">
+                    </div>
+                    <div class="artist-info">
+                        <h3 class="artist-name">Sofía Martínez</h3>
+                        <p class="artist-style">Biomechanical</p>
+                        <div class="artist-details">
+                            <div class="artist-location">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+                                <span>Mieres, Asturias</span>
+                            </div>
+                            <div class="artist-rating">
+                                <span class="star-icon">⭐</span>
+                                <span>4.6</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="artist-card">
+                    <div class="artist-image">
+                        <img src="images/artist2.jpg" alt="Marie Dubois">
+                    </div>
+                    <div class="artist-info">
+                        <h3 class="artist-name">Marie Dubois</h3>
+                        <p class="artist-style">Watercolor</p>
+                        <div class="artist-details">
+                            <div class="artist-location">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin h-4 w-4 mr-1"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+                                <span>Paris, France</span>
+                            </div>
+                            <div class="artist-rating">
+                                <span class="star-icon">⭐</span>
+                                <span>4.2</span>
                             </div>
                         </div>
                     </div>
@@ -352,7 +355,7 @@
                                     'find-styles': 'Estilos',
                                     'find-artist': 'Tatuadores',
                                     'messages': 'Mensajes',
-                                    'dashboard': 'Panel',
+                                    'dashboard': 'Perfil',
                                     'logout': 'Cerrar sesión'
                                 }
                             };
