--- a/pages/politica-privacidad.html
+++ b/pages/politica-privacidad.html
@@ -171,6 +171,9 @@
                     <a href="find-artists.html" class="nav-link" data-nav="find-artist">Tatuadores</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" class="nav-link" data-nav="map">Mapa</a>
+                </li>
+                <li class="nav-item">
                     <a href="login.html" class="nav-button" data-nav="login">Iniciar Sesión</a>
                 </li>
             </ul>
