--- a/pages/artist-profile.html
+++ b/pages/artist-profile.html
@@ -23,6 +23,9 @@
                     <a href="find-artists.html" class="nav-link">Artist</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" class="nav-link">Map</a>
+                </li>
+                <li class="nav-item">
                     <a href="login.html" class="nav-button">Login</a>
                 </li>
             </ul>
