--- a/pages/find-styles.html
+++ b/pages/find-styles.html
@@ -24,6 +24,9 @@
                     <a href="find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" class="nav-link" data-nav="map">Map</a>
+                </li>
+                <li class="nav-item">
                     <a href="login.html" class="nav-button" data-nav="login">Login</a>
                 </li>
             </ul>
@@ -124,7 +127,7 @@
                                     'find-styles': 'Estilos',
                                     'find-artist': 'Tatuadores',
                                     'messages': 'Mensajes',
-                                    'dashboard': 'Panel',
+                                    'dashboard': 'Perfil',
                                     'logout': 'Cerrar sesión'
                                 }
                             };
