--- a/pages/reset-password.html
+++ b/pages/reset-password.html
@@ -23,6 +23,9 @@
                     <a href="find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" class="nav-link" data-nav="map">Map</a>
+                </li>
+                <li class="nav-item">
                     <a href="login.html" class="nav-button" data-nav="login">Login</a>
                 </li>
             </ul>
