Añadido perfil de cada tatuador

--- a/pages/dashboard-artist.html
+++ b/pages/dashboard-artist.html
@@ -19,24 +19,7 @@
                 <span>Inker</span>
             </a>
             <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Styles</a>
-                </li>
-                <li class="nav-item">
-                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-nav="map">Map</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-nav="messages">Messages</a>
-                </li>
-                <li class="nav-item">
-                    <a href="dashboard-artist.html" class="nav-link" data-nav="dashboard">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" id="logoutBtn" class="nav-button" data-nav="logout">Logout</a>
-                </li>
+                <!-- Header will be populated by header-manager.js -->
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -500,6 +483,7 @@
     <script src="../js/notifications.js"></script>
     <script src="../js/cookie-consent.js"></script>
     <script src="../js/global-cookie-banner.js"></script>
+    <script src="../js/header-manager.js"></script>
     
     <script>
         // Dashboard functionality
