--- a/pages/artist-profile.html
+++ b/pages/artist-profile.html
@@ -312,6 +312,7 @@
     <script src="../js/config.js"></script>
     <script src="../js/database.js"></script>
     <script src="../js/auth.js"></script>
+    <script src="../js/email-config.js"></script>
     <script src="../js/i18n.js"></script>
     <script src="../js/artist-profile.js"></script>
     <script src="../js/contact-widget.js"></script>
