--- a/pages/dashboard-artist.html
+++ b/pages/dashboard-artist.html
@@ -477,6 +477,7 @@
     <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/database.js"></script>
+    <script src="../js/email-config.js"></script>
     <script src="../js/i18n.js"></script>
     <script src="../js/dashboard-artist.js"></script>
     <script src="../js/contact-widget.js"></script>
