--- a/pages/dashboard-user.html
+++ b/pages/dashboard-user.html
@@ -494,6 +494,7 @@
     <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/database.js"></script>
+    <script src="../js/email-config.js"></script>
     <script src="../js/i18n.js"></script>
     <script src="../js/dashboard-user.js"></script>
     <script src="../js/contact-widget.js"></script>
