--- a/pages/find-artists.html
+++ b/pages/find-artists.html
@@ -147,6 +147,7 @@
     <script src="../js/config.js"></script>
     <script src="../js/database.js"></script>
     <script src="../js/auth.js"></script>
+    <script src="../js/email-config.js"></script>
     <script src="../js/find-artists.js"></script>
     <script src="../js/contact-widget.js"></script>
     <script src="../js/i18n.js"></script>
