--- a/pages/find-styles.html
+++ b/pages/find-styles.html
@@ -82,6 +82,7 @@
     <script src="../js/config.js"></script>
     <script src="../js/database.js"></script>
     <script src="../js/auth.js"></script>
+    <script src="../js/email-config.js"></script>
     <script src="../js/find-styles.js"></script>
     <script src="../js/contact-widget.js"></script>
     <script src="../js/i18n.js"></script>
