--- a/pages/find-styles.html
+++ b/pages/find-styles.html
@@ -55,9 +55,9 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-left">
-                <a href="pages/terms-conditions.html" data-footer="terms">Terms and Conditions</a>
+                <a href="terms-conditions.html" data-footer="terms">Terms and Conditions</a>
                 <span class="separator">|</span>
-                <a href="pages/privacy-policy.html" data-footer="privacy">Privacy Policy</a>
+                <a href="privacy-policy.html" data-footer="privacy">Privacy Policy</a>
             </div>
             <div class="footer-center">
                 <p data-footer="copyright">&copy; 2025 Inker. All rights reserved.</p>
