--- a/pages/artist-profile.html
+++ b/pages/artist-profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Profile - Inker</title>
+    <link rel="icon" href="../images/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/artist-profile.css">
     <link rel="stylesheet" href="../css/contact-widget.css">
